--- a/composer.json
+++ b/composer.json
@@ -8,17 +8,19 @@
         "api-platform/api-pack": "^1.2",
         "doctrine/doctrine-migrations-bundle": "^2.0",
         "doctrine/orm": "^2.6",
+        "erusev/parsedown": "^1.7",
         "symfony/console": "4.3.*",
         "symfony/dotenv": "4.3.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.3.*",
-        "symfony/yaml": "4.3.*"
+        "symfony/yaml": "4.3.*",
+        "webmozart/assert": "^1.5"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.2",
+        "friendsofphp/php-cs-fixer": "^2.15",
         "hautelook/alice-bundle": "^2.5",
-        "symfony/maker-bundle": "^1.13",
-        "symfony/var-dumper": "4.3.*"
+        "symfony/maker-bundle": "^1.13"
     },
     "config": {
         "preferred-install": {
