--- a/fixtures/spells-evocation.yml
+++ b/fixtures/spells-evocation.yml
@@ -7,3 +7,4 @@ App\Entity\Spell:
     spellRange: long (400 ft. + 40 ft./level)
     subschool: Fire
     area: 20-ft.-radius spread
+    source: "@core-rulebook"
