--- a/config/packages/dev/hautelook_alice.yaml
+++ b/config/packages/dev/hautelook_alice.yaml
@@ -1,2 +1,5 @@
 hautelook_alice:
-    fixtures_path: fixtures
+    fixtures_path:
+        - fixtures
+        - fixtures/classes
+        - fixtures/spells
