--- a/fixtures/classes/classes-base.yml
+++ b/fixtures/classes/classes-base.yml
@@ -5,6 +5,7 @@ App\Entity\CharacterClass:
     hitDie: d8
     alignment: Any
     skillRanksPerLevel: 4 + INT modifier
+    startingWealth: 3d6 × 10 gp (average 105gp.) In addition, each character begins play with an outfit worth 10 gp or less.
     classSkills:
       - "@appraise"
       - "@craft"
@@ -26,6 +27,7 @@ App\Entity\CharacterClass:
     hitDie: d10
     alignment: Any
     skillRanksPerLevel: 4 + INT modifier
+    startingWealth: 5d6 × 10 gp (average 175gp.) In addition, each character begins play with an outfit worth 10 gp or less.
     classSkills:
       - "@bluff"
       - "@climb"
@@ -44,6 +46,7 @@ App\Entity\CharacterClass:
     hitDie: d10
     alignment: Any
     skillRanksPerLevel: 4 + INT modifier
+    startingWealth: 5d6 x 10 gp (average 175gp) In addition, each character begins play with an outfit worth 10 gp or less, and the gunslinger begins with her starting firearm.
     classSkills:
       - "@acrobatics"
       - "@bluff"
@@ -67,6 +70,7 @@ App\Entity\CharacterClass:
     hitDie: d8
     alignment: "An inquisitor’s alignment must be within one step of her deity’s, along either the law/chaos axis or the good/evil axis."
     skillRanksPerLevel: 6 + INT modifier
+    startingWealth: 4d6 × 10 gp (average 140gp.) In addition, each character begins play with an outfit worth 10 gp or less.
     classSkills:
       - "@bluff"
       - "@climb"
@@ -95,6 +99,7 @@ App\Entity\CharacterClass:
     hitDie: d8
     alignment: Any
     skillRanksPerLevel: 2 + INT modifier
+    startingWealth: 4d6 × 10 gp (average 140 gp.) In addition, each character begins play with an outfit worth 10 gp or less.
     classSkills:
       - "@climb"
       - "@craft"
@@ -115,6 +120,7 @@ App\Entity\CharacterClass:
     hitDie: d8
     alignment: Any
     skillRanksPerLevel: 4 + INT modifier
+    startingWealth: 3d6 × 10 gp (average 105gp.) In addition, each character begins play with an outfit worth 10 gp or less.
     classSkills:
       - "@craft"
       - "@diplomacy"
@@ -132,6 +138,7 @@ App\Entity\CharacterClass:
     hitDie: d8
     alignment: Any
     skillRanksPerLevel: 2 + INT modifier
+    startingWealth: 2d6 × 10 gp (average 70gp.) In addition, each character begins play with an outfit worth 10 gp or less.
     classSkills:
       - "@craft"
       - "@fly"
@@ -158,6 +165,7 @@ App\Entity\CharacterClass:
     hitDie: d6
     alignment: Any
     skillRanksPerLevel: 2 + INT modified
+    startingWealth: 3d6 × 10 gp (average 105 gp.) In addition, each character begins play with an outfit worth 10 gp or less.
     classSkills:
       - "@craft"
       - "@fly"
@@ -171,6 +179,3 @@ App\Entity\CharacterClass:
       - "@spellcraft"
       - "@use-magic-device"
     source: "@advanced-players-guide"
-
-
-
